--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ethan Ward - Web Developer from New York</title>
+  <title>Rakesh Pandit - Web Developer from Nepal</title>
 
   <!-- 
     - favicon
@@ -37,7 +37,7 @@
     <div class="container">
 
       <a href="#">
-        <h1 class="logo">Ethan Ward</h1>
+        <h1 class="logo">Rakesh Pandit</h1>
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
@@ -98,17 +98,17 @@
 
           <div class="hero-banner">
 
-            <img src="./assets/images/hero-banner.jpg" width="800" height="864" loading="lazy" alt="Ethan's Photo"
+            <img src="./assets/images/hero-banner.jpg" width="800" height="864" loading="lazy" alt="Rakesh's Photo"
               class="img-cover">
 
             <div class="elem elem-1">
-              <p class="elem-title">12</p>
+              <p class="elem-title">5</p>
 
               <p class="elem-text">Years of Success</p>
             </div>
 
             <div class="elem elem-2">
-              <p class="elem-title">800+</p>
+              <p class="elem-title">200+</p>
 
               <p class="elem-text">Projects Completed</p>
             </div>
@@ -126,11 +126,11 @@
 
             <h2 class="hero-title">
               <span>Hello I'm</span>
-              <strong>Ethan Ward</strong> Web Developer from New York
+              <strong>Ethan Ward</strong> Web Developer from Nepal
             </h2>
 
             <p class="hero-text">
-              Adipisicing elit. Neque nulla voluptatum eos repellat deserunt nesciunt tempore porro totam.
+             Professional website development for all industries. Let’s elevate your digital presence!
             </p>
 
             <div class="btn-group">
@@ -157,10 +157,10 @@
 
           <figure class="about-banner">
 
-            <img src="./assets/images/about-banner.jpg" width="800" height="652" loading="lazy" alt="Ethan's Photo"
+            <img src="./assets/images/about-banner.jpg" width="800" height="652" loading="lazy" alt="Rakesh's Photo"
               class="img-cover">
 
-            <img src="./assets/images/absolute-image.jpg" width="800" height="717" loading="lazy" alt="Ethan's Photo"
+            <img src="./assets/images/absolute-image.jpg" width="800" height="717" loading="lazy" alt="Rakesh's Photo"
               class="abs-img">
 
             <div class="abs-icon abs-icon-1">
@@ -455,7 +455,7 @@
                   <div>
                     <h3 class="contact-item-title">Email</h3>
 
-                    <a href="mailto:hello@ethan.com" class="contact-item-link">hello@ethan.com</a>
+                    <a href="contact@rakeshpandit.com.np" class="contact-item-link">contact@rakeshpandit.com.np</a>
                   </div>
 
                 </li>
@@ -469,7 +469,7 @@
                   <div>
                     <h3 class="contact-item-title">Phone</h3>
 
-                    <a href="tel:+1234567890" class="contact-item-link">+123 456 7890</a>
+                    <a href="tel:+9779745604597" class="contact-item-link">+9779745604597</a>
                   </div>
 
                 </li>
@@ -510,14 +510,14 @@
                 <figure class="card-banner">
                   <a href="#">
                     <img src="./assets/images/blog-1.jpg" width="1181" height="843" loading="lazy"
-                      alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
+                      alt="Professional website development for all industries. Let’s elevate your digital presence!" class="img-cover">
                   </a>
                 </figure>
 
                 <a href="#" class="card-tag">Web Development</a>
 
                 <h3 class="card-title">
-                  <a href="#">Jim Morisson Says when the musics over turn off the light</a>
+                  <a href="#">Professional website development for all industries. Let’s elevate your digital presence!</a>
                 </h3>
 
               </div>
@@ -529,14 +529,14 @@
                 <figure class="card-banner">
                   <a href="#">
                     <img src="./assets/images/blog-2.jpg" width="1181" height="843" loading="lazy"
-                      alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
+                      alt="Professional website development for all industries. Let’s elevate your digital presence!" class="img-cover">
                   </a>
                 </figure>
 
                 <a href="#" class="card-tag">Web Development</a>
 
                 <h3 class="card-title">
-                  <a href="#">Jim Morisson Says when the musics over turn off the light</a>
+                  <a href="#">Professional website development for all industries. Let’s elevate your digital presence!</a>
                 </h3>
 
               </div>
@@ -548,14 +548,14 @@
                 <figure class="card-banner">
                   <a href="#">
                     <img src="./assets/images/blog-3.jpg" width="1181" height="843" loading="lazy"
-                      alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
+                      alt="Professional website development for all industries. Let’s elevate your digital presence!" class="img-cover">
                   </a>
                 </figure>
 
                 <a href="#" class="card-tag">Web Development</a>
 
                 <h3 class="card-title">
-                  <a href="#">Jim Morisson Says when the musics over turn off the light</a>
+                  <a href="#">Professional website development for all industries. Let’s elevate your digital presence!</a>
                 </h3>
 
               </div>
@@ -581,7 +581,7 @@
     <div class="container">
 
       <p class="copyright">
-        &copy; 2022 <a href="#" class="copyright-link">codewithsadee</a>. All Rights Reseverd
+        &copy; 2024 <a href="#" class="copyright-link">Rakesh-Pandit-Developer</a>. All Rights Reseverd
       </p>
 
       <ul class="footer-list">
