--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <h2 class="hero-title">
               <span>Hello I'm</span>
-              <strong>Ethan Ward</strong> Web Developer from Nepal
+              <strong>Rakesh Pandit</strong> Web Developer from Nepal
             </h2>
 
             <p class="hero-text">
@@ -440,7 +440,7 @@
                     <h3 class="contact-item-title">Address</h3>
 
                     <address class="contact-item-link">
-                      20, London, United Kingdom
+                     Garuda-6, Rautahat, Nepal
                     </address>
                   </div>
 
